// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-password Should display password when button is clicked 1`] = `
<mg-input-password value="password">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password" value="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should display password when button is clicked 2`] = `
<mg-input-password value="password">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="text" value="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Hide password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye-slash"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  readonly: true,
  tooltip: 'tooltip',
  tooltipPosition: 'input',
  value: 'blu'
}: 1`] = `
<mg-input-password value="blu">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--readonly mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
            <mg-tooltip identifier="identifier-tooltip" message="tooltip">
              <mg-icon icon="info-circle"></mg-icon>
            </mg-tooltip>
          </div>
        </div>
      </mock:shadow-root>
      <b>
        •••
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  required: true,
  disabled: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-password value="blu">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--disabled mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" disabled="" id="identifier" name="identifier" required="" type="password" value="blu">
        <mg-button aria-controls="identifier" aria-disabled="true" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--disabled mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  required: true,
  readonly: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-password value="blu">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--readonly mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <b>
        •••
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="true" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  tooltip: 'My Tooltip Message',
  tooltipPosition: 'input',
  labelOnTop: true
}: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--label-on-top mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { labelHide: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title mg-u-visually-hidden">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { labelOnTop: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--label-on-top mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { readonly: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--readonly mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { readonly: true, labelOnTop: true, tooltip: 'Tooltip message' }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--label-on-top mg-c-input--password mg-c-input--readonly mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="Tooltip message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { readonly: true, tooltip: 'tooltip', tooltipPosition: 'input' }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--readonly mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="tooltip">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { readonly: true, value: 'blu' }: 1`] = `
<mg-input-password value="blu">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--readonly mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <b>
        •••
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { required: true, value: 'blu', helpText: 'My help text' }: 1`] = `
<mg-input-password value="blu">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password" value="blu">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { tooltip: 'My Tooltip Message' }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
            <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
              <mg-icon icon="info-circle"></mg-icon>
            </mg-tooltip>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { tooltip: 'My Tooltip Message', labelOnTop: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--label-on-top mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { tooltip: 'My Tooltip Message', tooltipPosition: 'label' }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {}: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should trigger events 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should update mg-width 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-2">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should update mg-width 2`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-4">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should update mg-width 3`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-16">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password display error message with locale: fr 1`] = `
<mg-input-password lang="fr">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Afficher le mot de passe" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <div id="identifier-error" slot="error">
        Ce champ est obligatoire.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password display error message with locale: xx 1`] = `
<mg-input-password lang="xx">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password display error with displayError component's public method 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password display error with displayError component's public method 2`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password should display override error with setError component's public method 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password should display override error with setError component's public method 2`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password should display override error with setError component's public method 3`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password should display override error with setError component's public method 4`] = `
<mg-input-password>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" required="" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <div id="identifier-error" slot="error">
        Override error
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-password patternerrormessage="Non">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-password patternerrormessage="Non">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--disabled mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" disabled="" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="true" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--disabled mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-password patternerrormessage="Non">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--has-error mg-c-input--password mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <span class="mg-c-input__input-group">
        <input aria-describedby="identifier-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="identifier" name="identifier" type="password">
        <mg-button aria-controls="identifier" aria-disabled="false" aria-label="Display password value" class="mg-c-input__append-button" is-icon="" role="button" tabindex="0">
          <mock:shadow-root>
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </mock:shadow-root>
          <mg-icon icon="eye"></mg-icon>
        </mg-button>
      </span>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-password patternerrormessage="Non">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--password mg-c-input--readonly mg-c-input--width-full">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-password>
`;
